# hypothesis-testing

./: 071-meet-ds-lab-applicants.ipynb  072-etl-class.ipynb  073-chi-square-test.ipynb  075-assignment.ipynb  2025-06-12_ab-test.csv  README.md  ds_applicants.json  ds_applicants_after_experiment.json  mscfe_applicants.json  mscfe_applicants_after_experiment.json  pyproject.toml
