[project]
name = "hypothesis-testing"
version = "0.1.0"
description = ""
authors = [
    {name = "RajeshPolavarapu",email = "mr.polavarapu.rajesh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook (>=7.4.3,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "country-converter (>=1.3,<2.0)",
    "ipython (>=9.3.0,<10.0.0)",
    "pymongo (>=4.13.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
